# rules_rust

examples/crate_universe_failure/: README.md  WORKSPACE.bazel  cargo-bazel-lock.json
examples/crate_universe_failure/aead_dep/: BUILD.bazel  Cargo.toml
examples/crate_universe_failure/age_dep/: Cargo.toml
examples/crate_universe_failure/extra_crate_features/: Cargo.toml  README.md  cargo-bazel-lock.json
examples/crate_universe_failure/extra_crate_features/common/: BUILD.bazel  Cargo.toml
examples/crate_universe_failure/extra_crate_features/net/: BUILD.bazel  Cargo.toml
examples/crate_universe_failure/extra_crate_features/wasm/: BUILD.bazel  Cargo.toml
examples/crate_universe_failure/missing_crate_features/: Cargo.toml  README.md  cargo-bazel-lock.json
examples/crate_universe_failure/missing_crate_features/aead_dep/: BUILD.bazel
examples/crate_universe_failure/serde_derive/: BUILD.bazel  Cargo.toml  README.md  cargo-bazel-lock.json
examples/crate_universe_failure/serde_derive/src/: main.rs
rust/platform/: triple_mappings.bzl
