[workspace]
resolver = "2"

members = [
    "common",
    "wasm",
    # NB: If this is commented with below change and also change in WORKSPACE.bazel,
    # "cargo generate-lockfile && CARGO_BAZEL_REPIN=true bazel build //extra_crate_features/wasm:wasm" succeeds
    "net",
]

excluded = [
    # NB: ^ and this uncommented
    # "net",
]
