load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crate_index_serde_derive//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "main",
    srcs = [
        "src/main.rs",
    ],
    proc_macro_deps = ["@crate_index_serde_derive//:serde_derive"],
    deps = ["@crate_index_serde_derive//:serde"],
)
